First part of Sqw doc. Misprint corrections
git-svn-id: https://svn.mccode.org/svn/McStasTeX@90 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx}
 \usepackage{psfrag}
 \usepackage{amsfonts}
+\usepackage{amsmath}
 \usepackage{amsbsy}
 \usepackage{verbatimfile}
 \usepackage{fancyhdr}
