--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -357,3 +357,10 @@
    year      = {1984},
    publisher = {Oxford Clarendon Press}
 }
+
+@book{Egelstaff67,
+  author    = {P.A. Egelstaff},
+   title     = {An introduction to the liquid state},
+   year      = {1967},
+   publisher = {Academic Press, London}
+}
