--- a/trunk/monitors.tex
+++ b/trunk/monitors.tex
@@ -1,5 +1,6 @@
 \chapter{Monitors and detectors}
 \index{Library!Components!monitors}
+\index{Monitors|textbf}
 
 In real neutron experiments, detectors and monitors play quite
 different roles. One wants the detectors to be as efficient as
@@ -45,7 +46,7 @@ the few code lines of existing monitors can easily be modified.
 
 However, the ultimate solution is the use of the
 ``Swiss army knife'' of monitors, {\rm Monitor\_nD}, that can face
-almost any simulation requirement, 
+almost any simulation requirement,
 but will prove challenging for users who like to perform own modifications.
 
 \newpage
