--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -6,6 +6,7 @@ This chapter contains a number of optical components
 that is used to modify the neutron beam in various ways,
 as well as the ``generic'' component {\bf Arm}.
 \index{Library!Components!optics}
+\index{Optics|textbf}
 
 \input{arm}
 
@@ -31,6 +32,7 @@ as well as the ``generic'' component {\bf Arm}.
 Choppers, velocity selectors}
 We list in this chapter some of the optics components that may be used for TOF class instrument simulations.
 \index{Library!Components!optics}
+\index{Optics|textbf}
 
 \newpage
 \input{chopper}
