--- a/trunk/Single_crystal.tex
+++ b/trunk/Single_crystal.tex
@@ -416,6 +416,8 @@ $$
 
 \subsection{The implementation}
 
+\component{Single\_crystal}{Kristian Nielsen}{$x_{width}, y_{height}, z_{thick}$,$\vec a, \vec b, \vec c, \Delta d/d$, mosaic, reflections}{$\sigma_{abs}, \sigma_{inc}$, ...}{not fully validated, centered}
+
 The equations describing the Single\_crystal simulation are quite
 complex, and consequently the code is fairly sizeable. Most of it is
 just the expansion of the vector and matrix equations in individual
@@ -444,7 +446,7 @@ program~\cite{crystallographica}.
 
 The input parameters for the component are \textit{xwidth},
 \textit{yheight}, and \textit{zthick} to define the dimensions of the
-crystal in meters; \textit{delta\_d\_d} to give the
+crystal in meters (area is centered); \textit{delta\_d\_d} to give the
 value of $\Delta d/d$ (no unit);
 $(\textit{ax}, \textit{ay}, \textit{az})$, $(\textit{bx}, \textit{by},
 \textit{bz})$, and $(\textit{cx}, \textit{cy}, \textit{cz})$ to define
