--- a/trunk/preface_comp.tex
+++ b/trunk/preface_comp.tex
@@ -22,7 +22,7 @@ the C programming language.
 It is a pleasure to thank Dir.~Kurt N.~Clausen for his continuous
 support to \MCS\ and for having initiated the project.
 Continuous support to \MCS\ has also come from Prof.~Robert McGreevy.
-Apart from the authors of this manual, 
+Apart from the authors of this manual,
 also Per-Olof \AA strand has contributed to the development of the \MCS\ system.
 %Both he and our other collaborators, Henrik M.\ R\o nnow and Mark
 %Hagen have made major contributions to the project.  Also the
@@ -55,20 +55,20 @@ as compared to version 1.4 (the last version of the component manual;
 then a section of the system manual) include
 
 \begin{itemize}
-\item{Validation of most components gainst analytical formula, 
+\item{Validation of most components against analytical formula,
 and benchmarking in simple cases}
-\item{Newly added, relatistic source components}
+\item{Newly added, realistic source components}
   \begin{itemize}
   \item \verb+ISIS_moderator+ ISIS source model based on MCNPX (D. Champion and S. Ansell, ISIS)
   \item \verb+Virtual_tripoli4_input/output+ Trioli4 (similar to MCNP) files reading/writing (G. Campioni, LLB)
   \item \verb+SNS_source+ SNS source model based on MCNPX (G. Granroth, SNS)
   \item \verb+Source_gen+ ILL sources Maxwellian parameters (E. Farhi/N. Kernavanois/H. Bordallo, ILL)
-  \item \verb+ESS_moderator_short+ Calculated source model for the short target station of the ESS project (K. Lefmann, Ris\o )
-  \item \verb+ESS_moderator_long+ Calculated source model for the long target station of the ESS project (K. Lefmann, Ris\o )
+  \item \verb+ESS_moderator_short+ Calculated source model for the short pulse target station of the ESS project (K. Lefmann, Ris\o )
+  \item \verb+ESS_moderator_long+ Calculated source model for the long pulse target station of the ESS project (K. Lefmann, Ris\o )
   \end{itemize}
 \item{Newly added, optical components}
   \begin{itemize}
-  \item \verb+Radial_collimator+ Radial collimator approximated and exact options (E. Farhi, ILL)
+  \item \verb+Radial_collimator+ Radial collimator with both approximated and exact options (E. Farhi, ILL)
   \item \verb+FermiChopper+ and \verb+Vitess_ChopperFermi+ Two Fermi Chopper components (M. Poehlmann, G. Zsigmond, ILL and PSI)
   \item \verb+Guide_tapering+ A rectangular tapered guide (U. Filges, PSI)
   \item \verb+Guide_curved+  Non-focusing curved neutron guide (R. Stewart, ILL)
@@ -78,7 +78,7 @@ and benchmarking in simple cases}
   \item \verb+Phonon_simple+ An isotropic acoustic phonon (K. Lefmann, Ris\o)
   \item \verb+PowderN+. N lines powder diffraction (P.K. Willendrup, Ris\o)
   \item \verb+Sans_spheres+ hard spheres in thin solution, mono disperse (L. Arleth, the Royal Veterinary and Agricultural University (DK), Kim Lefmann, Ris\o )
-  \item \verb+Isotropic_Sqw+ isotropic inelastic sample (powder, liquid, glass) 
+  \item \verb+Isotropic_Sqw+ isotropic inelastic sample (powder, liquid, glass)
 elastic/inelastic scattering from $S(q,\omega)$ data (E. Farhi, V. Hugovieux, ILL)
   \item \verb+SANS_*+ A collection of samples for SANS (H. Frielinghaus,  FZ-J\"ulich)
   \end{itemize}
