--- a/trunk/source_gen.tex
+++ b/trunk/source_gen.tex
@@ -1,18 +1,18 @@
 \section{Source\_gen: A general continuous source}
 \label{source-gen}
-\index{Sources!Source\_gen}
+\index{Sources!General continuous source}
 
-\component{Source\_gen}{(System) E. Farhi, ILL}{$w$, $h$, $xw$, $yh$, $E_0$, $\Delta E$, $T_1$, $T_2$, $T_3$, $I_1$, $I_2$, $I_3$ }{$r$, $\lambda_0$, $d\lambda$, $E_{min}$, $E_{max}$, $\lambda_{min}$, $\lambda_{max}$}{Validated for Maxwellian expressions}
+\component{Source\_gen}{(System) E. Farhi, ILL}{$w$, $h$, $xw$, $yh$, $E_0$, $\Delta E$, $T_1$, $T_2$, $T_3$, $I_1$, $I_2$, $I_3$ }{$r$, $\lambda_0$, $d\lambda$, $E_{min}$, $E_{max}$, $\lambda_{min}$, $\lambda_{max}$}{Validated for Maxwellian expressions. t=0}
 
 This component is a continuous neutron source (rectangular or circular), which aims at
-a rectangular target centered at the beam. 
-The angular divergence is given by the dimensions of the target. 
-The shape may be rectangular (dimension $h$ and $w$), or a disk of radius $r$. 
+a rectangular target centered at the beam.
+The angular divergence is given by the dimensions of the target.
+The shape may be rectangular (dimension $h$ and $w$), or a disk of radius $r$.
 The wavelength/energy range to emit is specified either using center and half width, or using minimum and maximum boundaries, alternatively for energy and wavelength.
 The flux spectrum is specified with the same Maxwellian parameters as in component Source\_Maxwell\_3 (refer to section \ref{source-maxwell}).
 
-Maxwellian parameters for some continuous sources 
-are given in Table~\ref{t:source-params}. 
+Maxwellian parameters for some continuous sources
+are given in Table~\ref{t:source-params}.
 
 \begin{table}
   \begin{center}
@@ -29,7 +29,7 @@ are given in Table~\ref{t:source-params}.
     \end{tabular}
     \caption{Flux parameters for actual sources used in components
              Source\_gen and Source\_Maxwell\_3.
-             For some cases, a correction factor to the intensity 
+             For some cases, a correction factor to the intensity
              should be used to reach measured data; for the PSI cold source,
              this correction factor is the beam current, $I_{\rm target}$,
              which is currently of the order 1.2~mA.
