--- a/trunk/source_simple.tex
+++ b/trunk/source_simple.tex
@@ -1,9 +1,9 @@
 \section{Source\_simple: A simple continuous source
 with a flat energy/wavelength spectrum}
 \label{source-simple}
-\index{Sources!Source\_simple}
+\index{Sources!Simple continuous source}
 
-\component{Source\_simple}{System}{ $r_{\rm s}$, $z_{\rm foc}$, $w$, $h$, $E_0$, $\Delta E$, $\Psi$}{$\lambda_0$, $d\lambda$}{Validated}
+\component{Source\_simple}{System}{ $r_{\rm s}$, $z_{\rm foc}$, $w$, $h$, $E_0$, $\Delta E$, $\Psi$}{$\lambda_0$, $d\lambda$}{Validated. t=0}
 
 This component is
 a simple source with an energy distribution which is uniform
