--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -2,7 +2,7 @@
 
 \chapter{Source components}
 \label{c:source}
-\index{Sources}
+\index{Sources|textbf}
 \index{Library!Components!sources}
 
 \MCS\ contains a number of different source components,
@@ -10,7 +10,7 @@ and any simulation will contain exactly one of these source.
 The main function of a source is to determine a set of initial
 parameters $({\bf r}, {\bf v}, t)$
 for each neutron ray. This is done by Monte Carlo choices from
-suitable distributions. For example, in all present sources 
+suitable distributions. For example, in all present sources
 the initial position is
 found from a uniform distribution over the source surface.
 The shape of most sources can be chosen to be either circular or rectangular.
@@ -22,12 +22,12 @@ and we let the neutron spin ${\bf s}=(0,0,0)$.
 For time-of-flight sources, the choice of the emission time, $t$,
 is being made on basis of detailed analytical expressions.
 For other sources, $t$ is set to zero.
-In the case one would like to use a steady state source 
-with time-of-flight settings, 
-the emission time of each neutron ray should be determined using 
-a Monte Carlo choice. This may be achieved by 
+In the case one would like to use a steady state source
+with time-of-flight settings,
+the emission time of each neutron ray should be determined using
+a Monte Carlo choice. This may be achieved by
 the \verb+EXTEND+ keyword in the instrument description source
-as in the example below:
+as in the example below:\index{Keyword!EXTEND}
 
 \begin{verbatim}
   TRACE
@@ -45,17 +45,17 @@ The flux of the sources deserves special attention. The total neutron
 intensity is defined as the sum of weights of all emitted neutron rays
 during one simulation
 (the unit of total neutron weight is thus neutrons per second).
-The flux, $\psi$, at an instrument is defined as intensity per area perpendicular 
+The flux, $\psi$, at an instrument is defined as intensity per area perpendicular
 to the beam direction.
 
 The source flux, $\Phi$, is defined in different units:
 the number of neutrons emitted per second from a
-1~cm$^2$ area on the source surface, 
-with direction within a 1~ster.\ solid angle, 
-and with wavelength within a 1 {\AA} interval. 
+1~cm$^2$ area on the source surface,
+with direction within a 1~ster.\ solid angle,
+and with wavelength within a 1 {\AA} interval.
 The total number of real neutrons emitted towards a given diaphragm
 in one second is therefore (for constant $\Phi$):
-\begin{equation} 
+\begin{equation}
 N_{\rm total} = \Phi A \Omega \Delta\lambda ,
 \end{equation}
 where $A$ is the source area, $\Omega$ is the solid angle of the
@@ -72,16 +72,16 @@ The simulations are performed so that detector intensities
 are independent of the number of neutron histories simulated
 (although more neutron histories will give better statistics).
 
-As a start, we recommand new \MCS\ users to use the 
+As a start, we recommand new \MCS\ users to use the
 {\bf Source\_simple} component.
-Slightly more realistic samples are {\bf Source\_Maxwell\_3} for
+Slightly more realistic sources are {\bf Source\_Maxwell\_3} for
 continuous sources or {\bf Moderator} for time-of-flight sources.
 
-Optimizers can dramatically improve the statistics, but may occasionally 
-give wrong results, due to misleaded optimization. 
+Optimizers can dramatically improve the statistics, but may occasionally
+give wrong results, due to misleaded optimization.
 You should always check such simulations with (shorter) non-optimized ones.
 
-Other ways to speed-up simulations are to read events from a file. 
+Other ways to speed-up simulations are to read events from a file.
 See section \ref{sources-seealso} for details.
 
 \begin{figure}
@@ -133,18 +133,18 @@ in a number of contributed components not described in this manual:
 \item ESS-project ({\bf ESS\_moderator\_long} and {\bf  ESS\_moderator\_short}).
 \end{itemize}
 
-When no analytical model (e.g. a Maxwellian distribution) exits, 
-one may have access to measurements, estimated flux distributions, 
-event files, and - better - to MCNP/Triploli4 neutron event records. 
+When no analytical model (e.g. a Maxwellian distribution) exits,
+one may have access to measurements, estimated flux distributions,
+event files, and - better - to MCNP/Triploli4 neutron event records.
 The following components are then useful:
 
 \begin{itemize}
-\item{{\bf misc/Virtual\_input} can read a \MCS\ event file 
-(in text or binary format), often bringing an order-of-magnitude speed-up. 
+\item{{\bf misc/Virtual\_input} can read a \MCS\ event file
+(in text or binary format), often bringing an order-of-magnitude speed-up.
 See section \ref{virtual_input}.}
 \item{{\bf contrib/Virtual\_tripoli4\_input} does the same, but from event files (text format) obtained from the \emph{Tripoli4} \cite{tripoli_webpage} reactor simulation program. Such files are usually huge.}
 \item{{\bf misc/Vitess\_input} can read \emph{Vitess} \cite{vitess_webpage} neutron event binary files.}
 \item{{\bf optics/Filter\_gen} reads a 1D distribution from a file, and may either modify or set the flux according to it.}
-\item{A component for reading MCNP "PTRAC" records is planed for a future release. 
+\item{A component for reading MCNP "PTRAC" records is planed for a future release.
 Please contact us if you like to participate.}
 \end{itemize}
