--- a/trunk/terms.tex
+++ b/trunk/terms.tex
@@ -12,7 +12,7 @@ the \MCS\ core team.
 \noindent
 \begin{itemize}
 \item{\bf Arm}  A generic \MCS\ component which defines a frame of reference
-      for other components. 
+      for other components.
 \item{\bf Component} One unit ({\em e.g.} optical element) in a neutron
       spectrometer.
 \item{\bf Definition parameter} An input parameter for a component. For
@@ -24,8 +24,9 @@ definition. For an instrument, a parameter that can be changed at
 simulation run-time.
 \item{\bf Instrument} An assembly of \MCS\ components defining
       a neutron spectrometer.
+\item{\bf Kernel} The \MCS\ language definition and the associated compiler
 \item{\bf \MCS} Monte Carlo Simulation of Triple Axis Spectrometers
-       (the name of this package).
+       (the name of this package). Pronounciation ranges from \emph{mex-tas}, to \emph{mac-stas} and \emph{m-c-stas}.
 \item{\bf Output parameter} An output parameter for a component.
   For example the counts in a monitor. An output parameter may be
   accessed from the instrument in which the component is used using
