--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -110,13 +110,11 @@ See section \ref{sources-seealso} for details.
 \newpage
 \input{Source_adapt}
 
-%\newpage
-%\input{Adapt_check}
+\input{Adapt_check}
 
 \newpage
 \input{Source_Optimizer}
 
-\newpage
 \input{Monitor_Optimizer}
 
 \newpage
