--- a/trunk/Monitor_nD.tex
+++ b/trunk/Monitor_nD.tex
@@ -275,15 +275,15 @@ COMPONENT UserMonitor = Monitor_nD(options="auto user1")
 (...)
 \end{verbatim}
 \end{itemize}
-Setting the user variable values may either make use of the neutron parameters (x,y,z,vx,vy,vz,t,sx,sy,sz,p), access the internal variables of the component that sets the user variables (in this example, those from the \verb+blah+ instance), and access any component OUTPUT parameter \index{Keyword!OUTPUT PARAMETERS} using the \verb+MC_GETPAR+ C macro(see chapter \ref{c:kernelcalls}).
+Setting the user variable values may either make use of the neutron parameters (x,y,z, vx,vy,vz, t, sx,sy,sz, p), access the internal variables of the component that sets the user variables (in this example, those from the \verb+blah+ instance), and access any component OUTPUT parameter \index{Keyword!OUTPUT PARAMETERS} using the \verb+MC_GETPAR+ C macro(see chapter \ref{c:kernelcalls}).
 \index{Library!Run-time!MC\_GETPAR}
 
 \index{Monitors!Number of neutron bounces in a guide}
-In the following example, we show how the number of bounces in a polygonal guide may be monitored. Let us have a guide made of many Guide\_gravity instances. We declare a global simulation variable \verb+nbounces+, set it to 0 for each neutron entering the guide, and sum-up all bounces from each section. Then we as Monitor\_nD to look at that value.
+In the following example, we show how the number of bounces in a polygonal guide may be monitored. Let us have a guide made of many Guide\_gravity instances. We declare a global simulation variable \verb+nbounces+, set it to 0 for each neutron entering the guide, and sum-up all bounces from each section, accessing the \verb+Gvars+ OUTPUT variable of component Guide\_gravity. Then we ask Monitor\_nD to look at that value.
 \begin{verbatim}
 DECLARE
 %{
-  double nbouces;
+  double nbounces;
 %}
 INITIALIZE
 %{
@@ -339,7 +339,8 @@ AT (...)
 
   (... e.g. a guide system )
 
-COMPONENT CorrelationMonitor  = Monitor_nD(options="x dx, auto, all bins=30, premonitor")
+COMPONENT CorrelationMonitor  = Monitor_nD(
+   options="x dx, auto, all bins=30, premonitor")
 AT (...)
 \end{verbatim}
 which performs the same monitoring as the previous example, but with a spatial correlation constrain. Indeed, it records the position {\it vs} the divergence of neutrons at the correlation location, but only if they reach the monitoring position. All usual Monitor\_nD variables may be used, except the user variables. These latter may be defined as described in section \ref{s:monnd:user} in an EXTEND block.
