--- a/trunk/Source_Optimizer.tex
+++ b/trunk/Source_Optimizer.tex
@@ -1,10 +1,10 @@
 \section{Source\_Optimizer: A general Optimizer for McStas}
 \label{source-optimizer}
 \index{Sources!Optimizer}\index{Optimization}
-\component{Source\_Optimizer}{E. Farhi, ILL}{options}{bins, step, keep}{not fully validated}
+\component{Source\_Optimizer}{E. Farhi, ILL}{options}{bins, step, keep}{partially validated}
 
-The component {\bf Source\_Optimizer} is not exactly a source, 
-but rather a neutron beam modifier. 
+The component {\bf Source\_Optimizer} is not exactly a source,
+but rather a neutron beam modifier.
 It should be positioned after the source, anywhere in the instrument description.
 The component  optimizes the whole neutron flux
 in order to achieve better statistics at each {\bf Monitor\_Optimizer}
@@ -17,12 +17,12 @@ The usage of the optimizer is very simple, and usually does not require
 any configuration parameter. Anyway the user can still customize the
 optimization through various {\it options}.
 
-Inb contrast to {\bf Source\_adapt}, this optimizer does not
-record correlations between neutron parameters. 
-Nevertheless it is rather efficient, 
+In contrast to {\bf Source\_adapt}, this optimizer does not
+record correlations between neutron parameters.
+Nevertheless it is rather efficient,
 enabling the user to increase the number of events
 at optimization criteria locations by typically a factor of 20.
-Hence, the signal error bars will decrease by a factor 4.5, 
+Hence, the signal error bars will decrease by a factor 4.5,
 since the overall flux remains unchanged.
 
 \subsection{The optimization algorithm}
@@ -37,7 +37,7 @@ When a {\it bad} neutron comes to the {\bf Source\_Optimizer} (it would
 then have few chances to reach {\bf Monitor\_Optimizer}), it is changed
 into a better one. That means that its position and velocity coordinates
 are translated to better values according to the {\it good} neutrons
-distribution tables. The neutron energy 
+distribution tables. The neutron energy
 ($\sqrt{v_x^2 + v_y^2 + v_z^2}$) is kept (as far as possible).
 
 The {\bf Source\_Optimizer} works as follow:
