--- a/trunk/Source_adapt.tex
+++ b/trunk/Source_adapt.tex
@@ -4,7 +4,7 @@
 \index{Optimization}
 \index{Sources!Adaptative source}
 
-\component{Source\_adapt}{K. Nielsen}{$x_{min}$, $x_{max}$, $y_{min}$, $y_{max}$, $E0$, $dE$, dist, $xw$, $yh$, $Phi$}{$\alpha$, $\beta$ (plenty, default values are ok)}{not fully validated}
+\component{Source\_adapt}{K. Nielsen}{$x_{min}$, $x_{max}$, $y_{min}$, $y_{max}$, $E0$, $dE$, dist, $xw$, $yh$, $Phi$}{$\alpha$, $\beta$ (plenty, default values are ok)}{partially validated}
 
 The {\bf Source\_adapt} component is a neutron source that uses adaptive
 importance sampling to improve the efficiency of the simulations. It
@@ -21,11 +21,11 @@ rectangle in the $x$-$y$ plane with a flat energy spectrum in a
 user-specified range. The flux per area per steradian per
 {\AA}ngstr{\o}m per second is specified by the user.
 
-The initial neutron weight is given by 
+The initial neutron weight is given by
 (see section~\ref{s:neutron-flux} for details)
-\begin{equation} 
+\begin{equation}
     p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
-    \frac{\Phi}{N_{\rm sim}} A \Omega \Delta\lambda . 
+    \frac{\Phi}{N_{\rm sim}} A \Omega \Delta\lambda .
 \end{equation}
 Here $\Delta\lambda$ is the total wavelength range of the source.
 A later version of
@@ -38,10 +38,10 @@ The input parameters for Source\_adapt are
 \textit{xmin}, \textit{xmax}, \textit{ymin}, and
 \textit{ymax} in meters to set the source dimensions;
 \textit{dist}, \textit{xw}, and \textit{yh}
-to set the focusing as for Source\_flat (section~\ref{source-simple}); 
+to set the focusing as for Source\_flat (section~\ref{source-simple});
 \textit{E0} and \textit{dE} to set the range of energies emitted, in meV (the range
 will be from $\textit{E0} - \textit{dE}$ to
-$\textit{E0} + \textit{dE}$); 
+$\textit{E0} + \textit{dE}$);
 flux to set the source flux $\Phi$ in ${\rm
   cm}^{-2} {\rm st}^{-1} \textit{\AA} {\rm s}^{-1}$;
 $N_{\rm eng}$, $N_{\rm pos}$, and $N_{\rm
@@ -61,10 +61,10 @@ the sampling distribution.
 
 \subsection{Optimization disclaimer}
 
-A warning is in place here regarding potentially wrong results 
-using optimization techniques.  
-It is highly recommanded in any case to benchmark 'optimized' simulations 
-against non-optimized ones, checking that obtained results are the same, 
+A warning is in place here regarding potentially wrong results
+using optimization techniques.
+It is highly recommanded in any case to benchmark 'optimized' simulations
+against non-optimized ones, checking that obtained results are the same,
 but hopefully with a much improved statistics.
 
 \subsection{The adaption algorithm}
@@ -156,7 +156,7 @@ The number $\alpha$ is given by the user and specifies (as a fraction
 between zero and one) the point at which the adaption is considered
 good. The initial fraction $\alpha$ of neutron histories are emitted
 with low weight; the rest are emitted with high weight:
-\begin{equation} 
+\begin{equation}
   p_0(j) =
     \frac{\Phi}{N_{\rm sim}} A \Omega \Delta\lambda
     \frac{\sum_{j=1}^{N_{\rm bin}} w_j}{N_{\rm bin} w_i}
@@ -187,14 +187,14 @@ adds a number $a$ to a bin, setting $v_i^{\rm new} = v_i^{\rm old} +
 a$. A \emph{search} finds, for given input $b$, the minimum $i$ such
 that
 \begin{equation}
- b \leq \sum_{j=1}^{i} v_j. 
+ b \leq \sum_{j=1}^{i} v_j.
 \end{equation}
 The search operation is used to sample from the distribution p. If $r$
 is a uniformly distributed random number on the interval
 $[0;\sum_{j=1}^N v_j]$ then $i = {\rm search}(r)$ is a random number
 distributed according to $p$. This is seen from the inequality
-\begin{equation} 
-\sum_{j=1}^{i-1} v_j < r \leq \sum_{j=1}^{i} v_j, 
+\begin{equation}
+\sum_{j=1}^{i-1} v_j < r \leq \sum_{j=1}^{i} v_j,
 \end{equation}
 from which $r \in [\sum_{j=1}^{i-1} v_j; v_i + \sum_{j=1}^{i-1} v_j]$
 which is an interval of length $v_i$. Hence the probability of $i$ is
@@ -204,5 +204,5 @@ adapt the distribution to the problem at hand during a simulation. Both
 the update and the add operation can be performed very efficiently; how
 this is achieved will be described elsewhere.
 
-As an alternative, you may use the {\bf Source\_Optimizer} component 
+As an alternative, you may use the {\bf Source\_Optimizer} component
 (see section \ref{source-optimizer}).
