--- a/trunk/source_gen.tex
+++ b/trunk/source_gen.tex
@@ -21,13 +21,13 @@ are given in Table~\ref{t:source-params}.
     \hline
     Source Name & $T_1$ & $I_1$ & $T_2$ & $I_2$ & $T_3$ & $I_3$ & factor \\
     \hline
-    PSI cold source & 150.42 & 3.67e11   & 38.74 & 3.64e11    & 14.84& 0.95e11    & * $I_{\rm target}$~(mA)\\
-    ILL VCS (H1)    & 216.8  & 1.24e13   & 33.9  & 1.02e13    & 16.7 & 3.0423e12  &\\
-    ILL HCS (H5)    & 413.5  & 10.22e12  & 145.8 & 3.44e13    & 40.1 & 2.78e13    & *2\\
-    ILL Thermal(H2) & 683.7  & 0.5874e13 & 257.7 & 2.5099e13  & 16.7 & 1.0343e12  & /2.25\\
-    ILL Hot source  & 1695   & 1.74e13   & 708   & 3.9e12     &      &            &\\ \hline
+    PSI cold source & 150.4  & 3.67e11   & 38.74 & 3.64e11    & 14.84& 0.95e11   & * $I_{\rm target}$~(mA)\\
+    ILL VCS (H1)    & 216.8  & 1.24e13   & 33.9  & 1.02e13    & 16.7 & 3.042e12  &\\
+    ILL HCS (H5)    & 413.5  & 10.22e12  & 145.8 & 3.44e13    & 40.1 & 2.78e13   & *2\\
+    ILL Thermal(H2) & 683.7  & 5.874e12  & 257.7 & 2.51e13    & 16.7 & 1.034e12  & /2.25\\
+    ILL Hot source  & 1695   & 1.74e13   & 708   & 3.9e12     &      &           &\\ \hline
     \end{tabular}
-    \caption{Flux parameters for actual sources used in components
+    \caption{Flux parameters for present sources used in components
              Source\_gen and Source\_Maxwell\_3.
              For some cases, a correction factor to the intensity
              should be used to reach measured data; for the PSI cold source,
